--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -69,7 +69,7 @@
                 <div class="modal-sandbox"></div>
                 <div class="modal-box">
                     <div class="modal-header">
-                        <h1 class="reg-font">YEEE</h1>
+                        <h1 class="reg-font">Delete Entry</h1>
                     <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
                     
                     </div>
