--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -58,11 +58,33 @@
                     <div class="line"></div>
 
                     </div>
+                    <div class="row justify-content-center">
+                        <button class="buttons" data-toggle="modal" data-target="#delete">
+                            Delete Account?
+                        </button>
+                </div>
                 </div>
                 </div>
                 </div>  
             </div>
+            <div class="modal" id="delete">
+
+                <div class="modal-sandbox"></div>
+                <div class="modal-box">
+                    <div class="modal-header">
+                        <h1 class="reg-font">Delete Entry</h1>
+                    <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
+                    
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete entry: </p>
+                    <br />
+                    <button type="button" class="modal-button" (click)="removeUser(currentUser)" data-dismiss="modal" aria-label="Delete">Delete</button>
+                    </div>
+                </div>
+                </div>
         </div>
+
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
