--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
@@ -3,16 +3,22 @@
 
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background: #fafafa;
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.0em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #8b593b;
+    color: black;
+}
+
+a{
+  font-size: 20px;
+  font-weight: 600;
+  color: grey;
 }
 
 .h2{
@@ -111,13 +117,14 @@ display: none;
 
 .modal-header {
   padding: 20px 40px;
-  background: #8b593b;
+  background: #F2B57C;
   color: #ffffff;
 }
 
 .modal-body {
-  background: whitesmoke;
+  background: ivory;
   padding: 60px 40px;
+  font-family: 'Montserrat'
 }
 
 /* Close Button */
@@ -150,9 +157,9 @@ display: none;
 }
 
 .modal-button{
-    border: 2px solid #30190b;
-    background-color: whitesmoke;
-    color: #8b593b;
+    border: 2px solid #F2B57C;
+    background-color: ivory;
+    color: #F2B57C;
     padding: 10px 24px;
     font-size: 16px;
     cursor: pointer;
@@ -160,6 +167,12 @@ display: none;
 }
 
 .modal-button:hover{
-    background-color:#8b593b;
+    background-color:#F2B57C;
     color: white; 
+}
+
+.link{
+  color: black;
+  font-size: 20px;
+  margin: 0;
 }
