--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="row justify-content-end">
                             <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 500;">{{meeting.participants.length}} Attendees:</a>
-                            <a class="link" routerLink="/coffee-chat-profiles" (click)="sendMeeting(meeting)">View Profiles</a>
+                            <a class="link" routerLink="/coffee-chat-profiles" (click)="sendMeeting(meeting)">View Details</a>
                         </div>
                     </div>
                     </div>
