--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.css
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.css
@@ -40,6 +40,17 @@
     color: black;
 }
 
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
+
+.link:hover{
+    background-color:#e4955e;
+    color: white; 
+}
+
 .button{
     border: 1px solid #e4955e;
     background-color: ivory;
@@ -48,6 +59,7 @@
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    text-decoration: none;
 }
 
 .button:hover{
