--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -52,6 +52,9 @@
                                 </div>
                                 <div class="row justify-content-center">
                                     <button class="button" (click)="sendMeeting(meeting)" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
+                                    <div class="divider"></div>
+                                    <a class="button" href="http://www.google.com/calendar/event?action=TEMPLATE&text=Coffee-Chat with {{meeting.host}}&dates=[start-custom format='{{meeting.time}}']/[end-custom format='{{meeting.time + 1}}']&details=[random]&location=[{{meeting.zoomLink}}]&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow">Add to my calendar</a>
+
                                 </div>
 
                   
