--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -53,6 +53,9 @@
                                 <div class="row justify-content-center">
                                     <button class="button" (click)="sendMeeting(meeting)" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
                                 </div>
+                                <div class="row justify-content-center">
+                                    <button class="button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
+                                </div>
 
                   
                             </div>
@@ -93,6 +96,24 @@
                 </div>
                 </div>
             </div>
+            <div class="modal" id="delete">
+
+                <div class="modal-sandbox"></div>
+                <div class="modal-box">
+                    <div class="modal-header">
+                        <h1 class="reg-font">Delete Meeting</h1>
+                    <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
+                    
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete this meeting? </p>
+                    <br />
+                    <button type="button" class="modal-button" (click)="deleteMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete">Delete</button>
+                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Cancel</button> 
+                    </div>
+                </div>
+                </div>
+
         </div>
 
 
