--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
@@ -100,7 +100,7 @@
                     <div class="modal-body">
                         <p>Are you sure you want to decline this meeting? </p>
                     <br />
-                    <button type="button" class="modal-button" (click)="declineMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete">Delete</button>
+                    <button type="button" class="modal-button" (click)="declineMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete">Decline</button>
                     <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Cancel</button> 
                     </div>
                 </div>
