--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -57,7 +57,7 @@
 
                                 </div>
                                 <div class="row justify-content-center">
-                                    <button class="button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
+                                    <button class="delete-button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
                                 </div>
 
                   
