--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
@@ -164,6 +164,7 @@ display: none;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    margin: 10px;
 }
 
 .modal-button:hover{
