--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -35,6 +35,13 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label style="color: black; font-weight: 600;">Meeting Title</label>
+                        <input type="text" placeholder="type title here" formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" />
+                            <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
+                            <div *ngIf="f.title.errors.required">Meeting Title is required</div>
+                            </div>
+                    </div>
+                    <div class="form-group">
                         <label for="start" style="color: black; font-weight: 600;">Date:</label>
                             <input type="date" id="start" name="trip-start"  
                                 value="dateToday"
