random fe changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="text-center">
             <img src="assets/images/logo transparent.png" alt="" width="140" height="100">
-            <p class="fancy-font" style="color: #59b6ec; font-size: 68px; text-shadow: 2px 2px grey;">Meaningful Minutes</p>
+            <p class="fancy-font" style="color: #a1c2a8; font-size: 68px; text-shadow: 1px 1px 5px black;">Meaningful Minutes</p>
             <div>
                 <hr class="divide2"/> 
             </div>
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10 text-center">
-        <p class="reg-font" style="color: #000000; font-size: 25px;">Ask yourself if what you're doing <a class="fancy-font" style="color: #A4D4F0; font-size: 50px;">today</a> is getting you closer to where you want to be <a class="fancy-font" style="color: #A4D4F0; font-size: 50px;">tomorrow.</a></p>
+        <p class="reg-font" style="color: #000000; font-size: 25px;">Ask yourself if what you're doing <a class="fancy-font" style="color: #a1c2a8; font-size: 50px;">today</a> is getting you closer to where you want to be <a class="fancy-font" style="color: #a1c2a8; font-size: 50px;">tomorrow.</a></p>
       </div>
       <div class="col"></div>
     </div>
