--- a/src/app/user-profile-contacts/user-profile-contacts.component.html
+++ b/src/app/user-profile-contacts/user-profile-contacts.component.html
@@ -28,7 +28,7 @@
             <div class="col-sm-10 offset-1" style="background-color: rgba(245, 245, 245, 0.774); padding: 1rem; box-shadow: 1px 1px 5px grey;">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group" style="max-width: 100%;">
-                    <h2>My Contacts</h2>
+                    <h2>{{currentUser.firstName}}'s Contacts</h2>
                     <input type="text" formControlName="friendToAdd" placeholder="Enter a username..." class="form-control" [ngClass]="{ 'is-invalid': submitted && f.friendToAdd.errors }" />
                     <div *ngIf="submitted && f.friendToAdd.errors" class="invalid-feedback">
                         <div *ngIf="f.friendToAdd.errors.required">Username is required</div>
