--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -35,7 +35,7 @@ h2{
   }
   
   .login-form input {
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
     outline: 0;
     background: #f2f2f2;
     width: 100%;
@@ -47,7 +47,7 @@ h2{
   }
   
   .login-form button {
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
     text-transform: uppercase;
     outline: 0;
     background: #f2b57c;
@@ -83,3 +83,105 @@ h2{
     background-image: linear-gradient(to right, rgb(216, 213, 213), black, rgb(216, 213, 213));
     margin-bottom: 30px;
   }
+
+  .modal,
+.modal-box {
+  z-index: 3000;
+}
+
+.modal-sandbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: transparent;
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgb(0,0,0);
+  background: rgba(0,0,0,.8);
+  overflow: auto;
+}
+
+.modal-box {
+  position: relative;
+  width: 80%;
+  max-width: 920px;
+  margin: 100px auto;
+  animation-name: modalbox;
+  animation-duration: .4s;
+  animation-timing-function: cubic-bezier(0,0,.3,1.6);
+}
+
+.modal-header {
+  padding: 20px 40px;
+  background: #f2b57c;
+  color: #ffffff;
+}
+
+.modal-body {
+  background: whitesmoke;
+  padding: 40px 40px;
+}
+
+/* Close Button */
+.close-modal {
+  text-align: center;
+  cursor: pointer;
+}
+
+/* Animation */
+@-webkit-keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+@keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+.modal-button{
+    border: 2px solid #f2b57c;
+    background-color: whitesmoke;
+    color: #f2b57c;
+    padding: 10px 24px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.modal-button:hover{
+    background-color:#f2b57c;
+    color: white; 
+}
+
+.link{
+  color: grey;
+  margin-left: 10px;
+  text-decoration: underline !important;
+}
+
+.link:hover{
+  text-decoration: underline !important;
+  color: lightgray !important;
+}
