--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -59,27 +59,50 @@
 
                     </div>
                     <div class="row justify-content-center">
-                        <button class="buttons" data-toggle="modal" data-target="#delete">
-                            Delete Account?
+                        <button class="buttons" data-toggle="modal" data-target="#edit-profile">
+                            Edit Profile
                         </button>
-                </div>
+                    </div>
+                    
                 </div>
                 </div>
                 </div>  
             </div>
+            
+            <div class="modal" id="edit-profile" style="z-index: 3000;">
+                <div class="modal-sandbox"></div>
+                <div class="modal-box">
+                    <div class="modal-header">
+                        <h3 class="type-font">Edit Profile</h3>
+                    <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
+                    
+                    </div>
+                    <div class="modal-body">
+                        <form>
+
+                        </form>
+                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="close">Update</button>
+                    <a type="button" class="link" data-dismiss="modal" aria-label="Close">Cancel</a>
+                    <a type="button" class="link" data-toggle="modal" data-target="#delete">Delete Account</a>
+                    </div>
+                </div>
+            </div>
+
             <div class="modal" id="delete">
 
                 <div class="modal-sandbox"></div>
                 <div class="modal-box">
                     <div class="modal-header">
-                        <h1 class="reg-font">Delete Entry</h1>
+                        <h3 class="type-font">Delete Account</h3>
                     <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
                     
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete entry: </p>
+                        <p>{{currentUser.firstName}}, are you sure you want to delete your Meaningful Minutes account?</p>
+                            <p>We will be sad to see you go. </p>
                     <br />
                     <button type="button" class="modal-button" (click)="removeUser(currentUser)" data-dismiss="modal" aria-label="Delete">Delete</button>
+                    <a type="button" class="link" data-dismiss="modal" aria-label="Close">Cancel</a>
                     </div>
                 </div>
                 </div>
