--- a/src/app/mood-tracker/mood-tracker.component.css
+++ b/src/app/mood-tracker/mood-tracker.component.css
@@ -1,7 +1,24 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+:host{
+    --color-first:#f9f0ef;
+    --color-second: #eed4cf;
+}
 
+html[data-theme="blue"] {
+    --color-first: #D8E4E7;
+    --color-second: #AFC5CA;
+}
 
+html[data-theme="pink"] {
+        --color-first: #f9f0ef;
+        --color-second: #eed4cf;
+}
+
+html[data-theme="green"] {
+    --color-first: #c8e2c7;
+    --color-second: #b4ceb3;
+}
 /* ---------------------------------------------------
     BUTTONS
 ----------------------------------------------------- */
@@ -65,28 +82,19 @@ p {
     color: #999;
 }
 
-#first.pink {
+.first{
+    background: var(--color-first);
     color:black;
     font-size: 28px;
     margin:auto;
     width: 700px;
     height: 350px;
-    background: #f9f0ef;
     overflow: hidden;
     border-radius:3px;
     border:1px solid rgb(117, 116, 116);
+    
 }
 
-#first.blue {
-    color:black;
-    font-size: 28px;
-    margin:auto;
-    width: 700px;
-    height: 350px;
-    background: #D8E4E7;
-    overflow: hidden;
-    border-radius:3px;
-    border:1px solid rgb(117, 116, 116);}
 
 .second{
     border-radius:3px;
@@ -95,24 +103,12 @@ p {
     height: 25%;
     margin: auto;
     margin-top: 10px;
-    background: #eed4cf;
+    background: var(--color-second);
     display: flex;
     justify-content: center;
     align-content: center;
 }
 
-.second1{
-    border-radius:3px;
-    border: 1px solid rgb(117, 116, 116);
-    width: 75%;
-    height: 25%;
-    margin: auto;
-    margin-top: 10px;
-    background: #C4A2A7;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
 
 #title{
     margin-top: 20px;
