dashboard bug fix

--- a/src/app/mood-tracker/mood-tracker.component.html
+++ b/src/app/mood-tracker/mood-tracker.component.html
@@ -28,7 +28,7 @@
     <div id="first" class= "pink" >
         <div id="second" class="second">
             <div id="title">How are you feeling today?</div>
-            <button type="button" (click)="colorPaletteBlue()">blue</button>
+            <!-- <button type="button" (click)="colorPaletteBlue()">blue</button> -->
         </div>
         
     <div class="mood-container">
