--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -76,67 +76,64 @@
                         <h3 class="type-font">Edit Profile</h3>
                     <div class="close-modal justify-content-end" style="margin-top: 1em" data-dismiss="modal" aria-label="Close">&#10006;</div> 
                     </div>
-                    <div class="modal-body">
-                        <form>
-                           <!--<hr>
+                    <div class="modal-body" aria-label="Close">
+                        <form [formGroup]="registerForm" aria-label="Close" (ngSubmit)="onSubmit()" >
+                           <hr>
                             <div class="form-group">
-                                <input type="text" placeholder="First Name" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                                <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                                     <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                                     <div *ngIf="f.firstName.errors.required">First Name is required</div>
                                     </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" placeholder="Last Name" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                                <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                                     <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                                     <div *ngIf="f.lastName.errors.required">Last Name is required</div>
                                     </div>
                             </div>
+                        
                             <div class="form-group">
-                            <input type="text" placeholder="Username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                                <div *ngIf="f.username.errors.required">Username is required</div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                            <input type="tel" formControlName="zoomLink" class="form-control" placeholder="Zoom Meeting ID: 1234567890" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
+                            <input type="tel" class="form-control" formControlName="zoomLink" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
                                 <div *ngIf="submitted && f.zoomLink.errors" class="invalid-feedback">
                                 Zoom Meeting ID required in correct format
                                 <p>If you don't have a Zoom Account, create an account here: https://zoom.us/freesignup/</p>
                                 </div>
                                 </div>
                             <div class="form-group">
-                            <input type="text" placeholder="Role/Title" formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }" />
+                            <input type="text" formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }" />
                             <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
                                 <div *ngIf="f.role.errors.required">Role/Title is required</div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <textarea ROWS="2" COLS="20" placeholder= "Brief Bio (max. 250 characters)" formControlName="bio" maxLength="250" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
+                            <textarea ROWS="2" COLS="20" formControlName="bio" maxLength="250" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
                             <div *ngIf="submitted && f.bio.errors" class="invalid-feedback">
                                 <div *ngIf="f.bio.errors.required">Bio is required</div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <textarea ROWS="2" COLS="20" placeholder="Hobbies (separate by commas)" formControlName="hobbies" maxLength="100" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
+                            <textarea ROWS="2" COLS="20" formControlName="hobbies" maxLength="100" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
                             <div *ngIf="submitted && f.hobbies.errors" class="invalid-feedback">
                                 <div *ngIf="f.hobbies.errors.required">Hobbies are required</div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <input type="password" placeholder="Password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                <div *ngIf="f.password.errors.required">Password is required</div>
-                            </div>
-                        </div>
+                        
                         <div class="form-group">
                             <input type="email" placeholder="Email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                 <div *ngIf="f.email.errors.required">Email is required</div>
                                 <div *ngIf="f.email.errors.email">Must be a valid email</div>
                             </div>
-                        </div>-->
+                        </div>
+                        <div class="form-group">
+                            <button [disabled]="loading" class="btn btn-primary" >
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                Update Account
+                            </button>
+                            
+                        </div>
                     </form>
-                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="close">Update</button>
+                    
                     <a type="button" class="link" data-dismiss="modal" aria-label="Close">Cancel</a>
                     <a type="button" class="link" data-toggle="modal" data-target="#delete">Delete Account</a>
                     </div>
