--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -47,6 +47,7 @@
                     Zoom Meeting ID required in correct format
                     <p>If you don't have a Zoom Account, create an account here: https://zoom.us/freesignup/</p>
                     </div>
+                    <p style="font-size: 10px; text-align: left; margin-top: -10px;">If you don't have a Zoom Account, create an account <a href="https://zoom.us/freesignup/" style="color: #f2b57c">here!</a></p>
                     </div>
                 <div class="form-group">
         <input type="text" placeholder="Role/Title" formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }" />
@@ -78,6 +79,7 @@
             <div *ngIf="f.email.errors.required">Email is required</div>
             <div *ngIf="f.email.errors.email">Must be a valid email</div>
         </div>
+        <p style="font-size: 10px; text-align: left; margin-top: -10px;">Google Calendar Compatible!</p>
     </div>
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">
