--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.css
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.css
@@ -15,6 +15,7 @@
   
   img {
     max-width: 100%;
+    min-width: 300px;
     max-height: 780px;
     min-height: 575px; }
   
@@ -55,7 +56,9 @@
   
     form {
         width: 50%;
-        height: fit-content;
+        min-width: 300px;
+        min-height: 575px;
+        max-height: 780px;
         background: ivory;
         background-size: 100%;
         padding-top: 35px;
@@ -140,7 +143,7 @@
       border-color: #f2b57c;
      }
   
-  @media (max-width: 600px) {
+  @media (max-width: 100%) {
     .inner {
       min-width: auto; }
   
