--- a/src/app/journal-free-edit/journal-free-edit.component.css
+++ b/src/app/journal-free-edit/journal-free-edit.component.css
@@ -28,7 +28,8 @@ textarea {
     width: 100%;
     display:inline-block !important;
     vertical-align:middle !important;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     }
 
 textarea:hover {
