--- a/src/app/journal-free-write/journal-free-write.component.css
+++ b/src/app/journal-free-write/journal-free-write.component.css
@@ -39,7 +39,8 @@ textarea {
     width: 100%;
     display:inline-block !important;
     vertical-align:middle !important;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-family: 'Montserrat';
     }
 textarea:hover {
