--- a/src/app/journal-prompt/journal-prompt.component.css
+++ b/src/app/journal-prompt/journal-prompt.component.css
@@ -29,7 +29,8 @@ textarea {
     width: 100%;
     display:inline-block !important;
     vertical-align:middle !important;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-family: 'Montserrat';
     }
 
