user profile edit + journal button fix?

--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -185,3 +185,8 @@ h2{
   text-decoration: underline !important;
   color: lightgray !important;
 }
+
+label{
+  font-family: 'Montserrat';
+  font-weight: 600;
+}
