--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -59,8 +59,10 @@
 
 
 <!--Zoom Embed-->
-<div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" [src]="zoomUrl | safe" frameborder="0"></iframe>
+<div *ngIf="zoomUrl != 'https://success.zoom.us/wc/join/'">
+    <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
+        <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" [src]="zoomUrl | safe" frameborder="0"></iframe>
+    </div>
 </div>
 
 
