--- a/src/app/coffee-chat/coffee-chat.component.html
+++ b/src/app/coffee-chat/coffee-chat.component.html
@@ -25,30 +25,30 @@
 
 <body>
     <div class="coffee-chat" id="content">
-        <div class="row">
-            <div class="col-3"></div>
-                <!--Button 1-->
+            <div class="row">
+                <div class="col-3"></div>
+                    <!--Button 1-->
+                    <div class="col-6 bkrd">
+                    <button class="button" routerLink="/coffee-chat-select-friends">
+                        Select Specific Friends
+                        <div class="button__horizontal"></div>
+                        <div class="button__vertical"></div>
+                    </button>
+                    </div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <!--Button 2-->
                 <div class="col-6 bkrd">
-                <button class="button" href="/coffee-chat-select-friends" routerLink="/coffee-chat-select-friends">
-                    Select Specific Friends
+                <button class="button" routerLink="/coffee-chat-random-friends">
+                    Randomly Generate Friends
                     <div class="button__horizontal"></div>
                     <div class="button__vertical"></div>
                 </button>
                 </div>
-            <div class="col-3"></div>
-        </div>
-        <div class="row">
-            <div class="col-3"></div>
-            <!--Button 2-->
-            <div class="col-6 bkrd">
-            <button class="button" href="/coffee-chat-random-friends" routerLink="/coffee-chat-random-friends">
-                Randomly Generate Friends
-                <div class="button__horizontal"></div>
-                <div class="button__vertical"></div>
-            </button>
+                <div class="col-3"></div>
             </div>
-            <div class="col-3"></div>
-        </div>
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
