--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -30,7 +30,7 @@
             <div class="col-3"></div>
                 <!--Button 1-->
                 <div class="col-6 bkrd">
-                <button class="button" href="/journal-free-write" routerLink="/journal-free-write">
+                <button class="button" routerLink="/journal-free-write">
                     Free Writing Entry
                     <div class="button__horizontal"></div>
                     <div class="button__vertical"></div>
@@ -42,7 +42,7 @@
             <div class="col-3"></div>
             <!--Button 2-->
             <div class="col-6 bkrd">
-            <button class="button" href="/journal-prompt" routerLink="/journal-prompt">
+            <button class="button" routerLink="/journal-prompt">
                 Respond to a Prompt
                 <div class="button__horizontal"></div>
                 <div class="button__vertical"></div>
